--- a/source/R5T.T0242/R5T.T0242.csproj
+++ b/source/R5T.T0242/R5T.T0242.csproj
@@ -12,4 +12,8 @@
     <PackageRequireLicenseAcceptance>True</PackageRequireLicenseAcceptance>
     <RepositoryUrl>https://github.com/SafetyCone/R5T.T0242.git</RepositoryUrl>
   </PropertyGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\..\R5T.T0142\source\R5T.T0142\R5T.T0142.csproj" />
+    <ProjectReference Include="..\..\..\R5T.T0243\source\R5T.T0243\R5T.T0243.csproj" />
+  </ItemGroup>
 </Project>
